Update download success response to be a 302 Redirect
